agregue archivo .css y modifique archivo .html y .txt

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <!DOCTYPE html>
 <head> </head>
+<body>
+  <div className="saludos">
+    <h1>Hola a todos</h1>
+    <p>
+      hola a todos mis colegas que estan haciendo el curso git en modo veloz
+    </p>
+  </div>
+</body>
