--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<head> </head>
+<head>
+  <title> el titulo del post</title>
+  <link rel="stylesheet" href="estilo.css"/>
+</head>
 <body>
   <div className="saludos">
     <h1>Hola a todos</h1>
     <p>
       hola a todos mis colegas que estan haciendo el curso git en modo veloz
     </p>
+    <h2> Como agregar .css aquí</h2>
   </div>
 </body>
