--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <head>
-  <title> el titulo del post</title>
-  <link rel="stylesheet" href="estilo.css"/>
+  <title>el titulo del post</title>
+  <link rel="stylesheet" href="estilo.css" />
 </head>
 <body>
   <div className="saludos">
+    <div id="cabecera">cabecera</div>
     <h1>Hola a todos</h1>
     <p>
       hola a todos mis colegas que estan haciendo el curso git en modo veloz
     </p>
-    <h2> Como agregar .css aquí</h2>
+    <h2>Como agregar .css aquí</h2>
   </div>
 </body>
