ajustes antes de hacer merge con master

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
   <link rel="stylesheet" href="estilo.css" />
 </head>
 <body>
-  <div className="saludos">
-    <div className="cabeza">cabecera otra vez</div>
+  <h1>Hola a todos muchas veces</h1>
+  <div id="saludos">
     <h1>Hola a todos</h1>
     <p>
       hola a todos mis colegas que estan haciendo el curso git en modo veloz
     </p>
     <h2>Como agregar .css aquí</h2>
+  </div>
+
+  <div id="cabeza">
+    <h1>cabecera otra vez</h1>
   </div>
 </body>
