modifique h1 en saludos y color pink en css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Hola a todos muchas veces</h1>
   <div id="saludos">
-    <h1>Hola a todos</h1>
+    <h1>Hola a todos blog de cabecera</h1>
     <p>
       hola a todos mis colegas que estan haciendo el curso git en modo veloz
     </p>
@@ -15,5 +15,6 @@
 
   <div id="cabeza">
     <h1>cabecera otra vez</h1>
+    <p>parrafo parrafo parrafooooo</p>
   </div>
 </body>
