--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>el titulo del post</title>
+  <title>Bienvenido a mi ejemplo de git</title>
   <link rel="stylesheet" href="estilo.css" />
 </head>
 <body>
